// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TotalAccounts should load with empty values when there's no data 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-12"
    >
      <div
        class="card card-root flex-fill p-3 w-100"
        style="min-height: 160px;"
      >
        <div
          class="card-title"
        >
          <div
            class="text-uppercase text-weight-semi-bold"
          >
            <span
              class="text-4"
            >
              Total Accounts
            </span>
          </div>
        </div>
        <div
          class="card-body justify-content-between d-flex no-padding"
        >
          <div
            class="mt-2"
          >
            <span
              class="text-3 text-secondary"
            >
              Displays all accounts included in this property.
            </span>
          </div>
          <div>
            <div
              class="mt-2 text-weight-semi-bold text-lowercase"
            >
              <span
                class="text-7"
              >
                0 Accounts
              </span>
            </div>
            <div
              class="text-secondary"
              data-testid="metric-card-trend"
            >
               
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col-lg-4 col-md-12"
    >
      <div
        class="card card-root flex-fill p-3 w-100"
        style="min-height: 160px;"
      >
        <div
          class="card-title"
        >
          <div
            class="text-uppercase text-weight-semi-bold"
          >
            <span
              class="text-4"
            >
              New Accounts
            </span>
          </div>
        </div>
        <div
          class="card-body justify-content-between d-flex no-padding"
        >
          <div
            class="mt-2"
          >
            <span
              class="text-3 text-secondary"
            >
              Displays all new accounts included in this property.
            </span>
          </div>
          <div>
            <div
              class="mt-2 text-weight-semi-bold text-lowercase"
            >
              <span
                class="text-7"
              >
                0 Accounts
              </span>
            </div>
            <div
              class="text-secondary"
              data-testid="metric-card-trend"
            >
              <span
                class="mr-1"
                style="color: rgb(107, 108, 126);"
              >
                0%
              </span>
               vs. Previous 90 Days
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col-lg-4 col-md-12"
    >
      <div
        class="card card-root flex-fill p-3 w-100"
        style="min-height: 160px;"
      >
        <div
          class="card-title"
        >
          <div
            class="text-uppercase text-weight-semi-bold"
          >
            <span
              class="text-4"
            >
              Active Accounts
            </span>
          </div>
        </div>
        <div
          class="card-body justify-content-between d-flex no-padding"
        >
          <div
            class="mt-2"
          >
            <span
              class="text-3 text-secondary"
            >
              Displays all active accounts included in this property.
            </span>
          </div>
          <div>
            <div
              class="mt-2 text-weight-semi-bold text-lowercase"
            >
              <span
                class="text-7"
              >
                0 Accounts
              </span>
            </div>
            <div
              class="text-secondary"
              data-testid="metric-card-trend"
            >
              <span
                class="mr-1"
                style="color: rgb(107, 108, 126);"
              >
                0%
              </span>
               vs. Previous 90 Days
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TotalAccounts should render 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-12"
    >
      <div
        class="card card-root flex-fill p-3 w-100"
        style="min-height: 160px;"
      >
        <div
          class="card-title"
        >
          <div
            class="text-uppercase text-weight-semi-bold"
          >
            <span
              class="text-4"
            >
              Total Accounts
            </span>
          </div>
        </div>
        <div
          class="card-body justify-content-between d-flex no-padding"
        >
          <div
            class="mt-2"
          >
            <span
              class="text-3 text-secondary"
            >
              Displays all accounts included in this property.
            </span>
          </div>
          <div>
            <div
              class="mt-2 text-weight-semi-bold text-lowercase"
            >
              <span
                class="text-7"
              >
                15 Accounts
              </span>
            </div>
            <div
              class="text-secondary"
              data-testid="metric-card-trend"
            >
               
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col-lg-4 col-md-12"
    >
      <div
        class="card card-root flex-fill p-3 w-100"
        style="min-height: 160px;"
      >
        <div
          class="card-title"
        >
          <div
            class="text-uppercase text-weight-semi-bold"
          >
            <span
              class="text-4"
            >
              New Accounts
            </span>
          </div>
        </div>
        <div
          class="card-body justify-content-between d-flex no-padding"
        >
          <div
            class="mt-2"
          >
            <span
              class="text-3 text-secondary"
            >
              Displays all new accounts included in this property.
            </span>
          </div>
          <div>
            <div
              class="mt-2 text-weight-semi-bold text-lowercase"
            >
              <span
                class="text-7"
              >
                10 Accounts
              </span>
            </div>
            <div
              class="text-secondary"
              data-testid="metric-card-trend"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-bottom-l"
                role="presentation"
                style="color: rgb(218, 20, 20);"
              >
                <use
                  href="#caret-bottom-l"
                />
              </svg>
              <span
                class="mr-1"
                style="color: rgb(218, 20, 20);"
              >
                30%
              </span>
               vs. Previous 90 Days
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col-lg-4 col-md-12"
    >
      <div
        class="card card-root flex-fill p-3 w-100"
        style="min-height: 160px;"
      >
        <div
          class="card-title"
        >
          <div
            class="text-uppercase text-weight-semi-bold"
          >
            <span
              class="text-4"
            >
              Active Accounts
            </span>
          </div>
        </div>
        <div
          class="card-body justify-content-between d-flex no-padding"
        >
          <div
            class="mt-2"
          >
            <span
              class="text-3 text-secondary"
            >
              Displays all active accounts included in this property.
            </span>
          </div>
          <div>
            <div
              class="mt-2 text-weight-semi-bold text-lowercase"
            >
              <span
                class="text-7"
              >
                1 Account
              </span>
            </div>
            <div
              class="text-secondary"
              data-testid="metric-card-trend"
            >
              <span
                class="mr-1"
                style="color: rgb(107, 108, 126);"
              >
                0%
              </span>
               vs. Previous 90 Days
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
